[tool.poetry]
name = "enum-oblako"
version = "0.1.0"
description = "Enumerates S3 buckets and SaaS"
authors = ["etyvrox"]
maintainers = ["etyvrox", "lisp3r", "uhx <11718563+uhx@users.noreply.github.com>"]
repository = "https://github.com/etyvrox/enum_oblako"
readme = "README.md"
packages = [{include = "enum_oblako"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.269"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
enum_oblako = "enum_oblako.cli:cloudrec"
